# CodeExperiments

./: CMakeLists.txt  Makefile  README.md  sample.cpp  sampleswithlib.tgz  workspace.code-workspace
Arm/.repo/manifests.git/: config
Arm/.repo/manifests.git/hooks/: commit-msg  post-checkout  pre-auto-gc  pre-commit  pre-push
Array/: 2sum.cpp  MoveZeroes.cp  NextPermutation.cpp  PlusOne.cp  RangeSumQuery.cpp  RemoveDuplicatesInPlace.cpp  RotateInPlace.cpp  SummedAreaTable.cpp  TwoSum.cpp  arraay1.cpp  childStrings.cpp  maxArray.cpp  maxmin.cpp  medianFinder.cpp  poisonousplants.cpp  trippletcount.cpp  whatflavors.cpp
Backtracking/: AllPossibleBraces.cpp  FindWordInGrid.cpp  LettersOfPhone.cpp  NQueens.cpp  PartitionToKEqualSum.cpp  SudokuSolver.cpp  permuteAndSubsets.cpp
BinaryTree/: NextLevelConnect.cpp  levelOrder.cpp  verticalOrder.cpp
CPP/: CMakeLists.txt  sample.cpp
ClientServer/: CMakeLists.txt  TcpClient.cpp  TcpEndpoint.h  sample.cpp
CodeExperimentsCMakeModules/: FindSDL2.cmake
DP/: LongestCommonSubsequence.cpp  LongestIncreasingPathInMatrix.cpp  TopologicalSort.cpp  TopologicalSort2.cpp  Tribonnacci.cpp  abbreviationDP.cpp  climbStairs.cpp  factDP.cpp  houseToRob.cpp  kthGrammar.cpp  kthGrammarTailRecursion.cpp  kthGrammarTailRecursionNotWorking.cpp  maxSubVecAndSumOfUnique.cpp  maximumSwap.cpp  mergeTwoLists.cpp  myPowTailRecursive.cpp  myPowTailRecursive2.cpp  reverseStringListPascalAndFib.cpp
DivideAndConquer/: FourSum.cpp
ExternalLibs/IMGUI/: Android.bp
ExternalLibs/IMGUI/backends/: imgui_impl_ml_gl.cpp  imgui_impl_ml_gl.h
Failed/: RedundantConnectionNotWorking.cpp  RedundantConnectionNotWorkingCrashingButPromissing.cpp  findRedundantConnection.cpp  fourSum.cpp  houseToRob.cpp  maxProfit.cpp  topKFrequentHeapOfTupleNotWorking.cpp
Generic/: Read4.cpp  sample.cpp
Google/: shuffle.cpp
Graph/: BFShr.cpp  BFSonGrid.cpp  CleaningRobot.cpp  DFShr.cpp  TopologicalSort.cpp  minPathOnMatrix.cpp
Greedy/: cloudsabovetown.cpp
Hash/: freqquery.cpp  hash  main  main.cpp  main1.cpp
Heap/: HeapOps.cpp  topkWordsButNotUsingHeaps.cpp  topkWordsUsingHeapButNotWorking.cpp
List/: AddTwoNumbers.cpp  DeepCopy.cpp  Merge2SortedLists.cpp  RevertList.cpp
OpenGL/: Main.cpp  Main.cpp.orig
OpenGL/Sample/: sample.cpp  sample.cpp.bak
OpenGL/Sample/lib/: CMakeLists.txt
OpenGL/SimpleSample/: CMakeLists.txt
OpenGL/SimpleSample/Binaries/: CodeExperiments  imgui.ini
OpenGL/SimpleSample/Shaders/: FullscreenQuad.vs  TextureSampling.fs
OpenGL/SimpleSample/src/: sample.cpp
OpenGL/SyncObjects/: ThreadSync.cpp
OpenGL/SyncObjects/Shaders/: CullBackgroundTris.gs  Mesh.fs  Mesh.vs  WireframePassthrough.gs
OpenGL/SyncObjects/src/: sample.cpp
OpenGL/lib/include/: sampleLibFile.h
OpenGL/lib/src/: sampleLibFile.cpp
Protos/: CMakeCache.txt  CMakeLists.txt  DebugGpuAlloc.cpp  DebugGpuAlloc.h  Makefile  cmake_install.cmake  gpudebug  main.cpp
PythonExp/: shapedetect.py
PythonExp/bak/: shapedetect.py.bak  shapedetect.py.computingcenterandradius  shapedetect.py.contourwcanny  shapedetect.py.fullpipelessradiusdetection  shapedetect.py.shapedetectandremoval  shapedetect.py.withclearshapedetection  shapedetect.py.withclearshapedetectionellipse
Queue/: Circular.cpp  LRUCache.cpp
Random/: randomSequence.cpp
Recursion/: DecodeWays.cpp  SuperDigit.cpp  SuperDigit2.cpp  SuperDigit3.cpp  WordBreak.cpp  gdcRecursive.cpp
RegEx/: HowNotToDoIt.cpp  OneIneficientButWorks.cpp
Sample/: CMakeLists.txt  ITcp.h  TcpClient.cpp  TcpEndpoint.h  TcpServer.cpp  hardware_buffer_comm.cpp  hardware_buffer_comm.h.bak  sample.cpp  sample.cpp.bak
SampleTemplate/: CMakeLists.txt
SampleTemplate/Binaries/: CodeExperiments
SampleWithLibTemplate/: CMakeLists.txt  CMakeLists.txt.bak
SampleWithLibTemplate/Binaries/: CodeExperiments
SampleWithLibTemplate/lib/: CMakeLists.txt
Samples/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sample  sample.cpp
SamplesWithLib/: CMakeLists.txt
SamplesWithLib/lib/src/: sampleLibFile.cpp
Sampling/: Reservoir.cpp
Search/: RotatedBinarySearch.cpp
Set/: duplicates.cpp
SimpleSampleTemplate/: CMakeLists.txt  Makefile  module.cpp  sample.cpp
Sort/: MergeSort.cpp
Stack/: SimplifyUnixPath.cpp  ValidParenthesis.cpp
StateMachine/: StateMachine.cpp  StateMachine.h  TextNoteStateMachine.cpp  TextNoteStateMachine.h  main.cpp
Strings/: AddStrings.cpp  LetterCombination.cpp  LongestPrefix.cpp  MatchingS1S2Child.cpp
Templates/: enable_if.cpp
Threads/: ConsumerProducer.cpp
Tree/: RightSideOfBinaryTree.cpp  SortedArrayToBST.cpp  SortedListToBinaryTree.cpp  TrieWithTokenParsing.cpp  numIslands.cpp
Tries/: WordBreakNotWorking.cpp
Tuple/: create.cpp
Vulkan/: VulkanApp.cpp
Vulkan/MySample/: Buffer.cpp  Buffer.h  CommandPool.cpp  CommandPool.h  DepthStencil.cpp  DepthStencil.h  DescriptorPool.cpp  DescriptorPool.h  Device.cpp  Device.h  DeviceSelector.cpp  DeviceSelector.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  Makefile  MySample.cpp  QueueSelector.cpp  QueueSelector.h  SwapChain.cpp  SwapChain.h  SyncObjects.cpp  SyncObjects.h  TextureImage.cpp  TextureImage.h  TextureImageSampler.cpp  TextureImageSampler.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h  VulkanApp.cpp  VulkanApp.h  renderdoc.cap  workspace.code-workspace
Vulkan/MySample/shaders/: mysample.vert
Vulkan/MySamples/: CMakeLists.txt  cmake.sh
Vulkan/MySamples/source/: CMakeLists.txt
Vulkan/MySamples/source/cube/: initInstance.cpp
Vulkan/MySamples/source/utils/: util.cpp  util.hpp
util/: ParseToken.cpp
